--- a/Gabarita/client/src/global.css
+++ b/Gabarita/client/src/global.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #121212;
+    background-color: #D1D1E0;
     color: #e0e0e0;
   }
   
